align issue fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -197,7 +197,7 @@ h1 {
 .kv {
     display: grid;
     grid-template-columns: 100px 1fr;
-    align-items: start;
+    align-items: center;
     gap: .6rem 1rem;
 }
 
@@ -221,7 +221,7 @@ h1 {
     display: inline-flex;
     line-height: 1;
     vertical-align: middle;
-    padding: .24rem .60rem;
+    padding: .25rem .6rem;
     margin-right: .35rem;
     border-radius: .5rem;
     border: 1px solid rgba(255, 255, 255, .10);
